Add spec file to pack SonarQube 4.5.1
Major challenges:
* Make the sonar FHS compliant
* Identify the critical parameters to pass to sonar via JSW wrapper
* Use symbol links to resolve FHS compliance
* Resolve embedded tomcat does not follow symbol link issue